--- a/app/elements/submission/tasks/javaut/javaut-task.html
+++ b/app/elements/submission/tasks/javaut/javaut-task.html
@@ -1,4 +1,4 @@
-<dom-module id="simple-code-task">
+<dom-module id="javaut-task">
   <template>
     <iron-ajax
       id="ajaxRequest"
@@ -10,27 +10,26 @@
     </iron-ajax>
     <div class="horizontal layout">
       <div class="flex">
-        <paper-material elevation="1" >
+        <paper-material elevation="1" class="card">
           <code-editor id="codeEditor" on-response="onResponse" on-error="onError"></code-editor>
         </paper-material>
       </div>
       <div class="flex">
-        <paper-material elevation="1">
+        <paper-material elevation="1" class="card">
           <task-display task="{{task}}"></task-display>
         </paper-material>
-        <paper-material elevation="1">
+        <paper-material elevation="1" class="card">
           <div class="horizontal layout">
             <paper-icon-button icon="av:play-arrow" on-click="runCode">Run code</paper-icon-button>
-            <language-selector id="languageSelector" languages={{languages}} on-change="languageChanged"></language-selector>
           </div>
-          <simple-console id="console"</simple-console>
+          <javaut-console id="console" </javaut-console>
         </paper-material>
       </div>
     </div>
   </template>
   <script>
     Polymer({
-      is: 'simple-code-task',
+      is: 'javaut-task',
       properties: {
         task: {
           type: Object,
@@ -38,18 +37,11 @@
           reflectToAttribute: true
         }
       },
-      observers: [
-        'afterPropertiesSet(task)'
-      ],
-      afterPropertiesSet: function(){
-        this.languages = getLanguagesForTags(this.task.Languages);
-      },
-      languageChanged: function(){
-        this.$.codeEditor.setMode(this.$.languageSelector.getSelectedLanguage().tag)
+      ready: function(){
+        this.$.codeEditor.setMode("java");
       },
       runCode: function(){
-        var lang = this.$.languageSelector.getSelectedLanguage().tag
-        this.$.codeEditor.runCode(lang, this.task.Key);
+        this.$.codeEditor.runCode("javaut", this.task.Key);
         this.$.console.loading();
       },
       onResponse: function(r){
