--- a/app/elements/submission/tasks/output-match/output-match-task.html
+++ b/app/elements/submission/tasks/output-match/output-match-task.html
@@ -1,4 +1,4 @@
-<dom-module id="javaut-task">
+<dom-module id="output-match-task">
   <template>
     <iron-ajax
       id="ajaxRequest"
@@ -10,26 +10,27 @@
     </iron-ajax>
     <div class="horizontal layout">
       <div class="flex">
-        <paper-material elevation="1" >
+        <paper-material elevation="1" class="card">
           <code-editor id="codeEditor" on-response="onResponse" on-error="onError"></code-editor>
         </paper-material>
       </div>
       <div class="flex">
-        <paper-material elevation="1">
+        <paper-material elevation="1" class="card">
           <task-display task="{{task}}"></task-display>
         </paper-material>
-        <paper-material elevation="1">
+        <paper-material elevation="1" class="card">
           <div class="horizontal layout">
-            <paper-icon-button icon="av:play-arrow" on-click="runCode">Run code</paper-icon-button>
+            <paper-icon-button src="/codeground/images/start.png" on-click="runCode">Run code</paper-icon-button>
+            <language-selector id="languageSelector" languages={{languages}} on-change="languageChanged"></language-selector>
           </div>
-          <javaut-console id="console" </javaut-console>
+          <output-test-console id="console"</output-test-console>
         </paper-material>
       </div>
     </div>
   </template>
   <script>
     Polymer({
-      is: 'javaut-task',
+      is: 'output-match-task',
       properties: {
         task: {
           type: Object,
@@ -37,12 +38,19 @@
           reflectToAttribute: true
         }
       },
-      ready: function(){
-        this.$.codeEditor.setMode("java");
+      observers: [
+        'afterPropertiesSet(task)'
+      ],
+      afterPropertiesSet: function(){
+        this.languages = getLanguagesForTags(this.task.Languages);
+      },
+      languageChanged: function(){
+        this.$.codeEditor.setMode(this.$.languageSelector.getSelectedLanguage().tag)
       },
       runCode: function(){
-        this.$.codeEditor.runCode("javaut", this.task.Key);
-        this.$.console.loading();
+        var lang = this.$.languageSelector.getSelectedLanguage()
+        this.$.codeEditor.runCode(lang, this.task.Key);
+        this.$.console.loading()
       },
       onResponse: function(r){
         this.$.console.setOutput(r.detail.response);
