General app login
 * Add app.login function that sets the role,
   refreshes the menu and redirects to the correct
   page

--- a/app/elements/candidates/candidate-page.html
+++ b/app/elements/candidates/candidate-page.html
@@ -28,7 +28,7 @@
     <paper-fab id="createActionButton" on-click="toggleDialog" icon="create"></paper-fab>
     <paper-dialog id="dialog" modal style="background: white;">
       <h2>Invite candidate</h2>
-      <p>The address format must be: Name (first and last name or a combination) &ltemail address&gt</p>
+      <p>The address format must be: Name (first and last name or a combination) &lt;email address&gt;</p>
       <form is="iron-form" id="form">
         <paper-input id="address" class="margined" label="Address" value="{{Address}}"></paper-input>
         <select id="challenges" class="margined" value="{{Challenge}}"></select><br>
