Display an overview of available tasks  * display a grid view of cards of all tasks  * enable selecting tasks to create a challenge

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -45,6 +45,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="challenge/challenge-detail.html">
 <link rel="import" href="challenge/challenge-list.html">
 
+<link rel="import" href="app-header.html">
+
 <link rel="import" href="submission/challenge-display.html">
 <link rel="import" href="submission/challenge-page.html">
 <link rel="import" href="submission/countdown-timer.html">
@@ -64,6 +66,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="login/login.html">
 
 <link rel="import" href="statistics/statistics.html">
+
+<link rel="import" href="task/task-card.html">
+<link rel="import" href="task/task-list.html">
+<link rel="import" href="task/task-skill.html">
 
 <!--error pages-->
 <link rel="import" href="error/error-page.html">
