--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -54,13 +54,22 @@
       checkAuthorization();
       checkIsCompany();
       app.route = 'candidate';
-      app.$.inviteCandidate.getChallenges();
+      app.$.candidatePage.getChallenges();
+      app.$.candidatePage.getCandidates();
       app.header = 'Candidates';
     });
 
     page('/login', function() {
-      app.route = 'login';
-      app.header = "Login"
+      if(hasAuthorization()){
+        if(localStorage.getItem("role")==="COMPANY"){
+          page('/candidates');
+        }else{
+          page('/challenge')
+        }
+      }else{
+        app.route = 'login';
+        app.header = "Login";
+      }
     });
 
     //################################## ERROR PAGES
