--- a/app/index.html
+++ b/app/index.html
@@ -131,7 +131,7 @@
             </section>
 
             <section data-route="candidate">
-              <candidate-page id="inviteCandidate"></candidate-page>
+              <candidate-page id="candidatePage"></candidate-page>
             </section>
 
             <section data-route="challenges">
