Hotfix for challenge creation

--- a/app/elements/app-header.html
+++ b/app/elements/app-header.html
@@ -19,8 +19,7 @@
         <template is="dom-if" if="{{!normalHeader}}">
             <paper-toolbar style="background-color: #0091ea">
                 <span class="paper-font-title">{{header}}</span>
-                <paper-fab icon="forward"
-                              on-click="createChallenge">ClickMe!</paper-fab>
+                <paper-fab icon="forward" on-click="createChallenge"></paper-fab>
             </paper-toolbar>
         </template>
 
