--- a/app/elements/candidates/candidate-page.html
+++ b/app/elements/candidates/candidate-page.html
@@ -38,7 +38,7 @@
         </select>
         <div style="float: right;">
           <paper-button dialog-dismiss class="margined">Cancel</paper-button>
-          <paper-button class="colorful margined" raised on-click="inviteCandidate">Invite</paper-button>
+          <paper-button class="colorful margined" raised on-click="inviteCandidate" dialog-confirm>Invite</paper-button>
         </div>
       </form>
     </paper-dialog>
