--- a/app/index.html
+++ b/app/index.html
@@ -33,17 +33,14 @@
   <!-- Tile icon for Win8 (144x144) -->
   <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
 
-  <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild-->
-
   <!-- build:js bower_components/webcomponentsjs/webcomponents-lite.min.js -->
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <!-- endbuild -->
 
-  <!-- will be replaced with elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
-  <!-- endreplace-->
+  <link rel="stylesheet" href="styles/classical.css">
+  <link rel="import" href="styles/classical.html">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body unresolved class="fullbleed layout vertical">
@@ -69,7 +66,7 @@
     </iron-ajax>
 
     <paper-drawer-panel id="paperDrawerPanel" disable-swipe="true" force-narrow>
-      <div drawer>
+      <div id="drawer" drawer>
         <paper-toolbar id="drawerToolbar" class="header">
           <span class="paper-font-title">Coduno</span>
         </paper-toolbar>
