Display skills from a task

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -67,10 +67,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="login/login.html">
 
 <link rel="import" href="statistics/statistics.html">
+<link rel="import" href="skill/task-skill.html">
+<link rel="import" href="skill/skill-list.html">
 
 <link rel="import" href="task/task-card.html">
 <link rel="import" href="task/task-list.html">
-<link rel="import" href="task/task-skill.html">
 
 <!--error pages-->
 <link rel="import" href="error/error-page.html">
