Fix java and output-match consoles

--- a/app/elements/editor-console/javaut/javaut-output.html
+++ b/app/elements/editor-console/javaut/javaut-output.html
@@ -9,10 +9,10 @@
     </style>
   <template>
     <p>{{runOutput.Stderr}}</p>
-    <p>Number of tests <span>{{runOutput.tests.Tests}}</span></p>
-    <p>Number of failures <span>{{runOutput.tests.Failures}}</span></p>
-    <p>Number of errors <span>{{runOutput.tests.Errors}}</span></p>
-    <template id="testCases" is="dom-repeat" items="{{runOutput.tests.TestCase}}">
+    <p>Number of tests <span>{{runOutput.Results.Tests}}</span></p>
+    <p>Number of failures <span>{{runOutput.Results.Failures}}</span></p>
+    <p>Number of errors <span>{{runOutput.Results.Errors}}</span></p>
+    <template id="testCases" is="dom-repeat" items="{{runOutput.Results.TestCase}}">
       <div>
         <iron-icon src="{{getIcon(item)}}"></iron-icon>
         <p class="inline"><span>{{getText(item)}}</span></p>
