--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -56,6 +56,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="submission/tasks/task-timeout.html">
 <link rel="import" href="submission/tasks/simple-code/simple-code-task.html">
 <link rel="import" href="submission/tasks/javaut/javaut-task.html">
+<link rel="import" href="submission/tasks/output-match/output-match-task.html">
 
 <link rel="import" href="editor-console/code-editor.html">
 <link rel="import" href="editor-console/language-selector.html">
