--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -18,6 +18,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="/bower_components/iron-selector/iron-selector.html">
 
+<!-- Neon elements -->
+<link rel="import" href="/bower_components/neon-animation/neon-animation.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animated-pages.html">
+
 <!-- Paper elements -->
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
@@ -65,7 +69,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="editor-console/javaut/javaut-console.html">
 <link rel="import" href="editor-console/output-test/output-test-console.html">
 
-<link rel="import" href="login/login.html">
+<link rel="import" href="login-page-email/login-page-email.html">
+<link rel="import" href="login-page-password/login-page-password.html">
+<link rel="import" href="login-page-u2f/login-page-u2f.html">
+<link rel="import" href="login-page-final/login-page-final.html">
+<link rel="import" href="login-wizard/login-wizard.html">
 
 <link rel="import" href="statistics/statistics.html">
 <link rel="import" href="skill/task-skill.html">
