--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
             </section>
 
             <section data-route="login">
-              <login-page></login-page>
+              <login-wizard></login-wizard>
             </section>
 
             <section data-route="candidate">
@@ -159,8 +159,8 @@
               </paper-material>
             </section>
 
-            <section data-route="500">
-              <error-page id="error500"></error-page>
+            <section data-route="error">
+              <error-page id="error"></error-page>
             </section>
           </iron-pages>
         </div>
